--- a/MVC_MultitecUA/Views/Sesion/Login.cshtml
+++ b/MVC_MultitecUA/Views/Sesion/Login.cshtml
@@ -6,14 +6,54 @@
 <h2>Login</h2>
 @using (Html.BeginForm("Login", "Sesion"))
 {
-    <div class="form-horizontal">
+    <!-- <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group form-inline">
-            <div class="col-md-10">
+            <div class="col-md-10 form-group">
                 <label for="nick">Nick: </label><input class="form-control" type="text" name="nick" /><br />
                 <label for="nick">Clave: </label><input class="form-control" type="password" name="pass" /><br />
                 <input type="submit" value="Iniciar Sesión" class="btn btn-default" />
             </div>
         </div>
-    </div>
+    </div> -->
+
+<br /><br />
+      <div>
+          <div class="form-group row">
+              @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+              @{ if (ViewData.ContainsKey("camposvacios"))
+                  {
+                      <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> No pueden haber campos vacios</p>
+                      <br />
+                  }
+              }
+              <label for="nick" class="col-sm-2 col-form-label">Nick:</label>
+              <div class="col-sm-10">
+                  <input type="text" class="form-control" id="nick" name="nick">
+                  @{
+                      if (ViewData.ContainsKey("nonick"))
+                      {
+                          <p class="text-danger"><span class="glyphicon glyphicon-remove"></span>Este usuario no existe</p>
+                      }
+                  }
+
+
+              </div>
+          </div>
+          <div class="form-group row">
+              <label for="inputPassword" class="col-sm-2 col-form-label">Contraseña:</label>
+              <div class="col-sm-8">
+                  <input type="password" class="form-control" id="inputPassword" name="pass">
+                  @{
+                      if (ViewData.ContainsKey("contrasena"))
+                      {
+                          <p class="text-danger"><span class="glyphicon glyphicon-remove"></span>La contraseña es incorrecta</p>
+                      }
+                  }
+              </div>
+          </div>
+
+          <input type="submit" value="Iniciar Sesión" class="btn btn-default" />
+      </div>
+    
 }
