--- a/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
@@ -1,64 +1,105 @@
 ﻿@model  IEnumerable<MVC_MultitecUA.Models.Servicio>
 
 @{
-    ViewBag.Title = "Servicios filtrados por estado";
+	ViewBag.Title = "Servicios filtrados por estado";
 }
 
 <h2>Servicios filtrados por estado: @ViewData["filtroEstado"]</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
-    <h3>Filtros:</h3>
-    @using (Html.BeginForm("PorEstado", "Servicio"))
-    {
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group form-group form-inline">
-                <div class="col-md-10">
-                    <label>Estado: </label>
-                    @Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
-                    <input type="submit" value="Buscar" class="btn btn-default" />
-                </div>
+	<h3>Filtros:</h3>
+	@using (Html.BeginForm("PorEstado", "Servicio"))
+	{
+		<div class="form-horizontal">
+			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+			<div class="form-group form-group form-inline">
+				<div class="col-md-10">
+					<label>Estado: </label>
+					@Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
+					<input type="submit" value="Buscar" class="btn btn-default" />
+				</div>
 
-            </div>
-        </div>
-    }
+			</div>
+		</div>
+	}
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Estado)
-        </th>
+	<tr>
+		<th>
+			@Html.DisplayNameFor(model => model.Nombre)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Descripcion)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Estado)
+		</th>
 
-        <th>Acciones</th>
-    </tr>
+		<th>Acciones</th>
+	</tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { item.Id }) |
-                @Html.ActionLink("Borrar", "Delete", new { item.Id })
-            </td>
-        </tr>
-    }
+	@foreach (var item in Model)
+	{
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Nombre)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Descripcion)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Estado)
+			</td>
+			<td>
+				@Html.ActionLink("Editar", "Edit", new { item.Id }) |
+				@Html.ActionLink("Detalles", "Details", new { item.Id }) |
+				@Html.ActionLink("Borrar", "Delete", new { item.Id })
+			</td>
+		</tr>
+	}
 
 </table>
 
+@{
+	/* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
+	var siguiente = (int)ViewData["pag"] + 1;
+	var anterior = siguiente - 2;
+	var numPags = (int)ViewData["numeroPaginas"] + 1;
+}
+<p class="text-center">
+	@{
+		if (siguiente > 1)
+		{
+			<label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+			<span>|</span>
+			<label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
+		}
+		else
+		{
+			<span>Primera</span>
+			<span>|</span>
+			<span>Anterior</span>
+		}
+	}
+
+	<span>|</span>
+	<label>Página @siguiente de @numPags</label>
+	<span>|</span>
+
+	@{
+		if (siguiente < numPags)
+		{
+			<label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+			<span>|</span>
+			<label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+		}
+		else
+		{
+			<span>Siguiente</span>
+			<span>|</span>
+			<span>Última</span>
+		}
+	}
+</p>
