--- a/MVC_MultitecUA/Views/Usuario/ForRol.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/ForRol.cshtml
@@ -1,115 +1,157 @@
 ﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.UsuarioEN>
 
 @{
-    ViewBag.Title = "Usuarios filtrados por Rol";
+	ViewBag.Title = "Usuarios filtrados por Rol";
 }
 
 <h2>Usuarios filtrados por Rol: @ViewData["rol"]</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
-    <h3>Filtros:</h3>
-    @using (Html.BeginForm("ForNick", "Usuario"))
-    {
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group form-inline">
-                <div class="col-md-10">
-                    <label for="nick">Nick: </label><input class="form-control" type="text" name="nick" />
-                    <input type="submit" value="Filtrar por Nick" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
+	<h3>Filtros:</h3>
+	@using (Html.BeginForm("ForNick", "Usuario"))
+	{
+		<div class="form-horizontal">
+			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+			<div class="form-group form-inline">
+				<div class="col-md-10">
+					<label for="nick">Nick: </label><input class="form-control" type="text" name="nick" />
+					<input type="submit" value="Filtrar por Nick" class="btn btn-default" />
+				</div>
+			</div>
+		</div>
+	}
 
-    @using (Html.BeginForm("ForRol", "Usuario"))
-    {
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group form-inline">
-                <div class="col-md-10">
-                    <label for="rol">Rol: </label>
-                    @Html.DropDownList("rol", new SelectList((System.Collections.IEnumerable)ViewData["listaRoles"]), new { @class = "form-control" })
-                    <input type="submit" value="Filtrar por Rol" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
+	@using (Html.BeginForm("ForRol", "Usuario"))
+	{
+		<div class="form-horizontal">
+			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+			<div class="form-group form-inline">
+				<div class="col-md-10">
+					<label for="rol">Rol: </label>
+					@Html.DropDownList("rol", new SelectList((System.Collections.IEnumerable)ViewData["listaRoles"]), new { @class = "form-control" })
+					<input type="submit" value="Filtrar por Rol" class="btn btn-default" />
+				</div>
+			</div>
+		</div>
+	}
 
-    @using (Html.BeginForm("ForCategoria", "Usuario"))
-    {
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group form-inline">
-                <div class="col-md-10">
-                    <label for="categoria">Categoría: </label>
-                    @Html.DropDownList("categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarios"]), new { @class = "form-control" })
-                    <input type="submit" value="Filtrar por Categoría" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
+	@using (Html.BeginForm("ForCategoria", "Usuario"))
+	{
+		<div class="form-horizontal">
+			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+			<div class="form-group form-inline">
+				<div class="col-md-10">
+					<label for="categoria">Categoría: </label>
+					@Html.DropDownList("categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarios"]), new { @class = "form-control" })
+					<input type="submit" value="Filtrar por Categoría" class="btn btn-default" />
+				</div>
+			</div>
+		</div>
+	}
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaAlta)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nick)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Rol)
-        </th>
-        <th>
-            Proyectos
-        </th>
-        <th>
-            Acciones
-        </th>
-    </tr>
+	<tr>
+		<th>
+			@Html.DisplayNameFor(model => model.Id)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Nombre)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Email)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.FechaAlta)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Nick)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Rol)
+		</th>
+		<th>
+			Proyectos
+		</th>
+		<th>
+			Acciones
+		</th>
+	</tr>
 
-    @foreach (var item in Model)
-    {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaAlta)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nick)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rol)
-        </td>
-        <td>
-            @Html.ActionLink("Proyectos", "ProyectosUsuarioPertenece", "Proyecto", new { id = item.Id }, null)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
-            @Html.ActionLink("Cambiar Rol", "ChangeRol", new { id = item.Id })
-        </td>
-    </tr>
-    }
+	@foreach (var item in Model)
+	{
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Id)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Nombre)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Email)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.FechaAlta)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Nick)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Rol)
+			</td>
+			<td>
+				@Html.ActionLink("Proyectos", "ProyectosUsuarioPertenece", "Proyecto", new { id = item.Id }, null)
+			</td>
+			<td>
+				@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+				@Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
+				@Html.ActionLink("Cambiar Rol", "ChangeRol", new { id = item.Id })
+			</td>
+		</tr>
+	}
 
 </table>
+
+@{
+	/* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
+	var siguiente = (int)ViewData["pag"] + 1;
+	var anterior = siguiente - 2;
+	var numPags = (int)ViewData["numeroPaginas"] + 1;
+}
+<p class="text-center">
+	@{
+		if (siguiente > 1)
+		{
+			<label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+			<span>|</span>
+			<label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
+		}
+		else
+		{
+			<span>Primera</span>
+			<span>|</span>
+			<span>Anterior</span>
+		}
+	}
+
+	<span>|</span>
+	<label>Página @siguiente de @numPags</label>
+	<span>|</span>
+
+	@{
+		if (siguiente < numPags)
+		{
+			<label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+			<span>|</span>
+			<label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+		}
+		else
+		{
+			<span>Siguiente</span>
+			<span>|</span>
+			<span>Última</span>
+		}
+	}
+</p>
