--- a/MVC_MultitecUA/Views/Noticia/Details.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/Details.cshtml
@@ -4,11 +4,25 @@
     ViewBag.Title = "Detalles";
 }
 
-<h2>Detalles de la Noticia: @ViewData["titulo"]</h2>
 
-<p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Noticias", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
-</p>
+
+@{
+    if (TempData.ContainsKey("noticiacreada"))
+    {
+        <h2 class="text-danger">Se ha creado la noticia: @ViewData["titulo"]</h2>
+    }
+    else if (TempData.ContainsKey("noticiaeditada"))
+    {
+        <h2 class="text-danger">Se ha editado con exito la noticia: @ViewData["titulo"]</h2>
+    }
+    else
+    {
+        <h2>Detalles de la Noticia: @ViewData["titulo"]</h2>
+        <p class="text-center">
+            <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Noticias", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+        </p>
+    }
+}
 
 <div>
     <hr />
