--- a/MVC_MultitecUA/Views/CategoriaUsuario/Create.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaUsuario/Create.cshtml
@@ -22,6 +22,11 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("nombreCU"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> Hasta 30 caracteres. Letras, números y espacios.</p>
+                    }
+                }
             </div>
         </div>
 
