--- a/MVC_MultitecUA/Views/Noticia/Create.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/Create.cshtml
@@ -10,10 +10,10 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Noticias", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -22,6 +22,11 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("formatotitulonoticia"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 5 a 50 caracteres. Letras, números y espacios.</p>
+                    }
+                }
             </div>
         </div>
 
@@ -30,6 +35,11 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Cuerpo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Cuerpo, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("formatocuerponoticia"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> El cuerpo debe ser de 10 a 4000 caracteres.</p>
+                    }
+                }
             </div>
         </div>
 
