--- a/MVC_MultitecUA/Views/Recuerdo/CreateNoId.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/CreateNoId.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Titulo, new { @class = "form-control" })
+                @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,6 +35,7 @@
             @Html.LabelFor(model => model.IdEvento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.IdEvento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.IdEvento, "", new { @class = "text-danger" })
                 @{
                     if (TempData.ContainsKey("nocreado"))
                     {
